qt/firewall/iptables/firewall-default.txt
# Generated by iptables-save v1.4.2 on Tue Mar  2 14:31:24 2010
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:HOME-NETWORK - [0:0]
-A INPUT -s 127.0.0.1/32 -d 127.0.0.1/32 -i lo -j ACCEPT 
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -s 192.168.1.0/24 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT 
-A INPUT -p icmp -m limit --limit 1/sec -j ACCEPT 
-A INPUT -p icmp -j DROP 
COMMIT
# Completed on Tue Mar  2 14:31:24 2010
